// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flashcard flipped it matches the snapshot 1`] = `
.c4 {
  overflow: auto;
  margin: 8px;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c3 {
  border-radius: 3px;
  background-color: #c9de55;
  height: 500px;
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.27);
  border-radius: 3px;
}

.c8 {
  border-radius: 3px;
  background-color: #eee;
  height: 500px;
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.27);
  border-radius: 3px;
}

.c6 {
  padding-top: 8px;
}

.c0 {
  height: 500px;
  width: 300px;
  -webkit-perspective: 1000px;
  -moz-perspective: 1000px;
  -ms-perspective: 1000px;
  perspective: 1000px;
}

.c1 {
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  -webkit-transform-style: preserve-3d;
  -ms-transform-style: preserve-3d;
  transform-style: preserve-3d;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: rotateY(180deg);
  -ms-transform: rotateY(180deg);
  transform: rotateY(180deg);
}

.c2 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  overflow: auto;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  -webkit-transform: rotateY(0deg);
  -ms-transform: rotateY(0deg);
  transform: rotateY(0deg);
}

.c7 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  overflow: auto;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  -webkit-transform: rotateY(180deg);
  -ms-transform: rotateY(180deg);
  transform: rotateY(180deg);
}

.c5 {
  padding-bottom: 8px;
}

@media print {
  .c0 {
    -webkit-break-after: always;
    break-after: always;
  }
}

@media print {
  .c1 {
    -webkit-transform-origin: unset;
    -ms-transform-origin: unset;
    transform-origin: unset;
    -webkit-transition-duration: unset;
    transition-duration: unset;
    -webkit-transform: unset;
    -ms-transform: unset;
    transform: unset;
    position: unset;
    top: unset;
    bottom: unset;
    left: unset;
    right: unset;
  }
}

@media print {
  .c2 {
    -webkit-backface-visibility: unset;
    backface-visibility: unset;
    overflow: unset;
    position: unset;
    top: unset;
    bottom: unset;
    left: unset;
    right: unset;
    box-shadow: none;
    border-radius: 0;
    border: 1px dotted;
    border-bottom: 1px solid;
  }
}

@media print {
  .c2 {
    -webkit-transform: unset;
    -ms-transform: unset;
    transform: unset;
  }
}

@media print {
  .c7 {
    -webkit-backface-visibility: unset;
    backface-visibility: unset;
    overflow: unset;
    position: unset;
    top: unset;
    bottom: unset;
    left: unset;
    right: unset;
    box-shadow: none;
    border-radius: 0;
    border: 1px dotted;
    border-bottom: 1px solid;
  }
}

@media print {
  .c7 {
    -webkit-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
  }
}

<div
  className="c0"
  height={500}
  width={300}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        display="flex"
        height={500}
        width={300}
      >
        <div
          className="c4"
          overflow="auto"
        >
          <h1
            className="c5"
          >
            What you are trying to prove, your thesis
          </h1>
          <span
            className="c6"
          >
            Aliens Exist
          </span>
        </div>
      </div>
    </div>
    <div
      className="c7"
    >
      <div
        className="c8"
        display="flex"
        height={500}
        width={300}
      >
        <h1
          className=""
        >
          Claim
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Flashcard it matches the snapshot 1`] = `
.c4 {
  overflow: auto;
  margin: 8px;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c3 {
  border-radius: 3px;
  background-color: #c9de55;
  height: 300px;
  width: 100px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.27);
  border-radius: 3px;
}

.c6 {
  border-radius: 3px;
  background-color: #eee;
  height: 300px;
  width: 100px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.27);
  border-radius: 3px;
}

.c0 {
  height: 300px;
  width: 100px;
  -webkit-perspective: 1000px;
  -moz-perspective: 1000px;
  -ms-perspective: 1000px;
  perspective: 1000px;
}

.c1 {
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  -webkit-transform-style: preserve-3d;
  -ms-transform-style: preserve-3d;
  transform-style: preserve-3d;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.c2 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  overflow: auto;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  -webkit-transform: rotateY(0deg);
  -ms-transform: rotateY(0deg);
  transform: rotateY(0deg);
}

.c5 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  overflow: auto;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  -webkit-transform: rotateY(180deg);
  -ms-transform: rotateY(180deg);
  transform: rotateY(180deg);
}

@media print {
  .c0 {
    -webkit-break-after: always;
    break-after: always;
  }
}

@media print {
  .c1 {
    -webkit-transform-origin: unset;
    -ms-transform-origin: unset;
    transform-origin: unset;
    -webkit-transition-duration: unset;
    transition-duration: unset;
    -webkit-transform: unset;
    -ms-transform: unset;
    transform: unset;
    position: unset;
    top: unset;
    bottom: unset;
    left: unset;
    right: unset;
  }
}

@media print {
  .c2 {
    -webkit-backface-visibility: unset;
    backface-visibility: unset;
    overflow: unset;
    position: unset;
    top: unset;
    bottom: unset;
    left: unset;
    right: unset;
    box-shadow: none;
    border-radius: 0;
    border: 1px dotted;
    border-bottom: 1px solid;
  }
}

@media print {
  .c2 {
    -webkit-transform: unset;
    -ms-transform: unset;
    transform: unset;
  }
}

@media print {
  .c5 {
    -webkit-backface-visibility: unset;
    backface-visibility: unset;
    overflow: unset;
    position: unset;
    top: unset;
    bottom: unset;
    left: unset;
    right: unset;
    box-shadow: none;
    border-radius: 0;
    border: 1px dotted;
    border-bottom: 1px solid;
  }
}

@media print {
  .c5 {
    -webkit-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
  }
}

<div
  className="c0"
  height={300}
  width={100}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        display="flex"
        height={300}
        width={100}
      >
        <div
          className="c4"
          overflow="auto"
        >
          
          
        </div>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c6"
        display="flex"
        height={300}
        width={100}
      >
        <h1
          className=""
        >
          
        </h1>
      </div>
    </div>
  </div>
</div>
`;
